<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.baraa.training.ecommerce.ui.auth.viewmodel.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:scrollbars="none"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginTop="65dp"
                android:contentDescription="@string/app_icon"
                android:src="@drawable/logo_blue" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/auth_welcome_msg" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/MessageTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/sign_in_msg" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout_ed_text"
                style="@style/LayoutEditTextStyle"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_filed_ed_text"
                    style="@style/EditTextStyle"
                    android:drawableStart="@drawable/ic_email"
                    android:hint="@string/email_et_hint"
                    android:inputType="textEmailAddress"
                    android:text="@={viewmodel.email}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout_ed_text"
                style="@style/LayoutEditTextStyle"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_filed_ed_text"
                    style="@style/EditTextStyle"
                    android:drawableStart="@drawable/ic_passw"
                    android:hint="@string/password_et_hint"
                    android:inputType="textPassword"
                    android:text="@={viewmodel.password}"
                    tools:ignore="PrivateResource" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_btn"
                style="@style/PrimaryButtonStyle"
                android:layout_marginTop="16dp"
                android:onClickListener="@{() -> viewmodel.loginWithEmailAndPassword()}"
                android:text="@string/sign_in" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerInParent="true"
                    android:background="@color/neutral_light" />

                <TextView
                    style="@style/EditTextStyle"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@color/white"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:text="@string/or"
                    android:textAllCaps="true"
                    android:textColor="@color/neutral_grey"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
            </RelativeLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/google_signin_btn"
                style="@style/SocialButtonStyle"
                android:drawableLeft="@drawable/ic_google"
                android:text="@string/google_signin_btn_msg"
                tools:ignore="RtlHardcoded" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/facebook_signin_btn"
                style="@style/SocialButtonStyle"
                android:drawableLeft="@drawable/ic_facebook"
                android:text="@string/facebook_signin_btn_msg"
                tools:ignore="RtlHardcoded" />

<!--            <com.facebook.login.widget.LoginButton-->
<!--                android:id="@+id/facebook_signin_btn"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center_horizontal"-->
<!--                android:layout_marginTop="30dp"-->
<!--                android:layout_marginBottom="30dp" />-->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/forgot_password_tv"
                style="@style/MediumPrimaryTextViewStyle"
                android:layout_height="37dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/forgot_password_msg"
                android:textAllCaps="false"
                tools:ignore="TouchTargetSizeCheck" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:gravity="top"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/MessageTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_an_account_msg"
                    android:textSize="14sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/register_tv"
                    style="@style/MediumPrimaryTextViewStyle"
                    android:layout_width="63dp"
                    android:padding="0dp"
                    android:paddingStart="5dp"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</layout>