<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.baraa.training.ecommerce.ui.auth.viewmodel.RegisterViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/logo_blue" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/register_welcome_msg" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/MessageTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/sign_up_msg" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_layout_ed_text"
                style="@style/LayoutEditTextStyle"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_filed_ed_text"
                    style="@style/EditTextStyle"
                    android:drawableStart="@drawable/ic_name"
                    android:hint="@string/name_et_hint"
                    android:inputType="textPersonName"
                    android:text="@={viewmodel.name}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout_ed_text"
                style="@style/LayoutEditTextStyle"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_filed_ed_text"
                    style="@style/EditTextStyle"
                    android:drawableStart="@drawable/ic_email"
                    android:hint="@string/email_et_hint"
                    android:inputType="textEmailAddress"
                    android:text="@={viewmodel.email}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout_ed_text"
                style="@style/LayoutEditTextStyle"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_filed_ed_text"
                    style="@style/EditTextStyle"
                    android:drawableStart="@drawable/ic_passw"
                    android:hint="@string/password_et_hint"
                    android:inputType="textPassword"
                    android:text="@={viewmodel.password}"
                    tools:ignore="PrivateResource" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_password_layout_ed_text"
                style="@style/LayoutEditTextStyle"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_password_filed_ed_text"
                    style="@style/EditTextStyle"
                    android:drawableStart="@drawable/ic_passw"
                    android:hint="@string/password_again_et_hint"
                    android:inputType="textPassword"
                    android:text="@={viewmodel.confirmPassword}"
                    tools:ignore="PrivateResource" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signup_btn"
                style="@style/PrimaryButtonStyle"
                android:layout_marginTop="16dp"
                android:onClickListener="@{() -> viewmodel.registerWithEmailAndPassword()}"
                android:text="@string/sign_up" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerInParent="true"
                    android:background="@color/neutral_light" />

                <TextView
                    style="@style/EditTextStyle"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@color/white"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:text="@string/or"
                    android:textAllCaps="true"
                    android:textColor="@color/neutral_grey"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
            </RelativeLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/google_signin_btn"
                style="@style/SocialButtonStyle"
                android:drawableLeft="@drawable/ic_google"
                android:text="@string/google_signup_btn_msg"
                tools:ignore="RtlHardcoded" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/facebook_signin_btn"
                style="@style/SocialButtonStyle"
                android:drawableLeft="@drawable/ic_facebook"
                android:text="@string/facebook_signup_btn_msg"
                tools:ignore="RtlHardcoded" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:layout_marginTop="8dp"
                android:gravity="top"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/MessageTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have_an_account_msg"
                    android:textSize="14sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sign_in_tv"
                    style="@style/MediumPrimaryTextViewStyle"
                    android:layout_width="63dp"
                    android:padding="0dp"
                    android:paddingStart="5dp"
                    android:text="@string/signin"
                    android:textAllCaps="false"
                    tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</layout>